[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hvae"
version = "0.1.0"
authors = [
    {name = "Sebastian Dziadzio", email = "dziadzio@hey.com"},
]
description = "Exploring continual learning with hierarchical VAEs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning",
    "torch",
    "torchvision",
]

[tool.hatch.build]
include = ["hvae"]

[tool.ruff]
select = ["E", "F", "B"]
line-length = 120
ignore = ["B905"]